# alloy-multicall

./: Cargo.toml  LICENSE  README.md
example/: get_amount_out.rs  simple_erc20.rs
examples/: get_amount_out.rs  simple_erc20.rs  simple_trc20.rs
src/: constants.rs  contract.rs  error.rs  lib.rs  middleware.rs  multicall_address.rs
