[package]
name = "alloy-multicall"
version = "0.1.2"
authors = ["Corn3333"]
license = "MIT"
edition = "2021"
readme = "./README.md"
repository = "https://github.com/Corn3333/alloy-multicall"
homepage = "https://github.com/Corn3333/alloy-multicall"
description = """
Multicall for everyone.
"""


[dependencies]
thiserror = "1.0.0"

alloy-sol-types = { version = "0.8.0", features = ["std", "json"] }
alloy-primitives = "0.8.0"
alloy-contract = "0.3.1"
alloy-provider = { version = "0.3.1", features = ["reqwest"] }
alloy-transport = "0.3.1"
alloy-chains = "0.1.29"
alloy-dyn-abi = "0.8.0"
alloy-json-abi = "0.8.0"


[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
